--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                 <a href="https://github.com/TaraFathianPour" target="_blank">GitHub</a> <br>
                 <a href="https://www.instagram.com/tara.fathianpour/" target="_blank">Instagram</a>
             </div>
-        
+    </section>   
     <p>
         <a href="#">Back to Top</a>
     </p>
