--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <title>about Tara</title>
     <meta name="author" content="Tara Fathianpour" >
     <meta name="description" content="Hi, I'm Tara Fathianpour. This page is about me."> 
-    <link rel="stylesheet" href="about.css">
+    <!--<link rel="stylesheet" href="about.css"> -->
+    <link rel="stylesheet" href="main.css" type="text/css">
     <link rel="icon" href="profile-r.png" type="image/x-icon">
 </head>
 <body>
@@ -20,6 +21,7 @@
             <li><a href="#about">about me</a></li>
             <li><a href="#skills">My Skills</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#services">services</a></li>
         </ul>
     </nav>
 
@@ -60,6 +62,49 @@
             <li>Figma</li>
             <li>Trello</li>
         </ul>
+    </section>
+    <br>
+    <section id="services">
+        <h2>My Services</h2>
+        <p> I offer comprehensive web development and design solutions tailored to your needs. 
+            Each service is designed to deliver high-quality results with clear timelines and 
+            the latest technologies. Here's a detailed breakdown of what I can create for you:
+        </p>
+        <table>
+            <caption>Development Services Overview</caption>
+            <thead>
+                <tr>
+                    <th>Service</th>
+                    <th>Description</th>
+                    <th>Technologies</th>
+                    <th>Timeline</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Web Development</td>
+                    <td>Custom websites and web applications</td>
+                    <td>HTML, CSS, JavaScript, React</td>
+                    <td>2-4 weeks</td>
+                </tr>
+                 <tr>
+                    <td>UI/UX Design</td>
+                    <td>User-centered design solutions</td>
+                    <td>Figma, Adobe XD, Sketch</td>
+                    <td>1-3 weeks</td>
+                </tr>
+                <tr>
+                    <td rowspan="2">Game Design</td>
+                    <td>Complete game development</td>
+                    <td rowspan="2">Unity, Blender, Photoshop</td>
+                    <td>6-9 weeks</td>
+                </tr>
+                <tr>
+                    <td>Player-centered game design</td>
+                    <td>4-8 weeks</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 
     <section id="contact">
